src/parse/cc/ccParser.py
# Generated from ccParser.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class ccParser ( Parser ):

    grammarFileName = "ccParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "'namespace'", "'using'", 
                     "'typedef'", "'class'", "'struct'", "'enum'", "'union'", 
                     "'public'", "'private'", "'protected'", "'virtual'", 
                     "'override'", "'final'", "'template'", "'typename'", 
                     "'friend'", "'inline'", "'explicit'", "'extern'", "'static'", 
                     "'mutable'", "'constexpr'", "'const'", "'volatile'", 
                     "'auto'", "'void'", "'bool'", "'char'", "'short'", 
                     "'int'", "'long'", "'float'", "'double'", "'signed'", 
                     "'unsigned'", "'if'", "'else'", "'switch'", "'case'", 
                     "'default'", "'for'", "'while'", "'do'", "'break'", 
                     "'continue'", "'return'", "'goto'", "'try'", "'catch'", 
                     "'throw'", "'new'", "'delete'", "'this'", "'nullptr'", 
                     "'true'", "'false'", "'noexcept'", "'operator'", "'sizeof'", 
                     "'...'", "'::'", "'->'", "'->*'", "'++'", "'--'", "'&&'", 
                     "'||'", "'<='", "'>='", "'=='", "'!='", "'+='", "'-='", 
                     "'*='", "'/='", "'%='", "'&='", "'|='", "'^='", "'<<='", 
                     "'>>='", "'<<'", "'>>'", "'('", "')'", "'{'", "'}'", 
                     "'['", "']'", "';'", "','", "'.'", "':'", "'?'", "'='", 
                     "'+'", "'-'", "'*'", "'/'", "'%'", "'&'", "'|'", "'^'", 
                     "'!'", "'~'", "'<'", "'>'" ]

    symbolicNames = [ "<INVALID>", "PP_DIRECTIVE", "NAMESPACE", "USING", 
                      "TYPEDEF", "CLASS", "STRUCT", "ENUM", "UNION", "PUBLIC", 
                      "PRIVATE", "PROTECTED", "VIRTUAL", "OVERRIDE", "FINAL", 
                      "TEMPLATE", "TYPENAME", "FRIEND", "INLINE", "EXPLICIT", 
                      "EXTERN", "STATIC", "MUTABLE", "CONSTEXPR", "CONST", 
                      "VOLATILE", "AUTO", "VOID", "BOOL", "CHAR", "SHORT", 
                      "INT", "LONG", "FLOAT", "DOUBLE", "SIGNED", "UNSIGNED", 
                      "IF", "ELSE", "SWITCH", "CASE", "DEFAULT", "FOR", 
                      "WHILE", "DO", "BREAK", "CONTINUE", "RETURN", "GOTO", 
                      "TRY", "CATCH", "THROW", "NEW", "DELETE", "THIS", 
                      "NULLPTR", "TRUE", "FALSE", "NOEXCEPT", "OPERATOR", 
                      "SIZEOF", "ELLIPSIS", "SCOPE", "ARROW", "ARROWSTAR", 
                      "PLUSPLUS", "MINUSMINUS", "ANDAND", "OROR", "LE", 
                      "GE", "EQ", "NE", "PLUSEQ", "MINUSEQ", "STAREQ", "DIVEQ", 
                      "MODEQ", "ANDEQ", "OREQ", "XOREQ", "LSHIFTEQ", "RSHIFTEQ", 
                      "LSHIFT", "RSHIFT", "LPAREN", "RPAREN", "LBRACE", 
                      "RBRACE", "LBRACK", "RBRACK", "SEMI", "COMMA", "DOT", 
                      "COLON", "QUESTION", "ASSIGN", "PLUS", "MINUS", "STAR", 
                      "DIV", "MOD", "AMP", "PIPE", "CARET", "BANG", "TILDE", 
                      "LT", "GT", "IntegerLiteral", "FloatingLiteral", "CharacterLiteral", 
                      "StringLiteral", "Identifier", "LineComment", "BlockComment", 
                      "WS" ]

    RULE_translationUnit = 0
    RULE_topLevelDeclaration = 1
    RULE_preprocessorDirective = 2
    RULE_templateDeclaration = 3
    RULE_templateParameterList = 4
    RULE_templateParameter = 5
    RULE_namespaceDefinition = 6
    RULE_linkageSpecification = 7
    RULE_classDefinition = 8
    RULE_classKey = 9
    RULE_baseClause = 10
    RULE_baseSpecifier = 11
    RULE_classMemberDeclaration = 12
    RULE_accessSpecifier = 13
    RULE_enumDefinition = 14
    RULE_enumeratorList = 15
    RULE_enumerator = 16
    RULE_usingDeclaration = 17
    RULE_typedefDeclaration = 18
    RULE_functionDefinition = 19
    RULE_functionDeclarator = 20
    RULE_functionBody = 21
    RULE_declaration = 22
    RULE_initDeclaratorList = 23
    RULE_initDeclarator = 24
    RULE_declaratorList = 25
    RULE_declarator = 26
    RULE_arraySuffix = 27
    RULE_ptrOperator = 28
    RULE_refQualifier = 29
    RULE_noexceptSpecification = 30
    RULE_trailingReturnType = 31
    RULE_parameterDeclarationList = 32
    RULE_parameterDeclaration = 33
    RULE_declSpecifierSeq = 34
    RULE_declSpecifier = 35
    RULE_storageClassSpecifier = 36
    RULE_functionSpecifier = 37
    RULE_cvQualifier = 38
    RULE_simpleTypeSpecifier = 39
    RULE_typeReference = 40
    RULE_qualifiedIdentifier = 41
    RULE_unqualifiedIdentifier = 42
    RULE_operatorToken = 43
    RULE_initializer = 44
    RULE_braceInitializer = 45
    RULE_compoundStatement = 46
    RULE_statement = 47
    RULE_declarationStatement = 48
    RULE_ifStatement = 49
    RULE_switchStatement = 50
    RULE_whileStatement = 51
    RULE_doWhileStatement = 52
    RULE_forStatement = 53
    RULE_forInitStatement = 54
    RULE_returnStatement = 55
    RULE_breakStatement = 56
    RULE_continueStatement = 57
    RULE_tryStatement = 58
    RULE_handler = 59
    RULE_exceptionDeclaration = 60
    RULE_labeledStatement = 61
    RULE_expressionStatement = 62
    RULE_constantExpression = 63
    RULE_expression = 64
    RULE_assignmentExpression = 65
    RULE_assignmentOperator = 66
    RULE_conditionalExpression = 67
    RULE_logicalOrExpression = 68
    RULE_logicalAndExpression = 69
    RULE_inclusiveOrExpression = 70
    RULE_exclusiveOrExpression = 71
    RULE_andExpression = 72
    RULE_equalityExpression = 73
    RULE_relationalExpression = 74
    RULE_shiftExpression = 75
    RULE_additiveExpression = 76
    RULE_multiplicativeExpression = 77
    RULE_unaryExpression = 78
    RULE_unaryOperator = 79
    RULE_postfixExpression = 80
    RULE_postfixSuffix = 81
    RULE_argumentExpressionList = 82
    RULE_primaryExpression = 83
    RULE_literal = 84

    ruleNames =  [ "translationUnit", "topLevelDeclaration", "preprocessorDirective", 
                   "templateDeclaration", "templateParameterList", "templateParameter", 
                   "namespaceDefinition", "linkageSpecification", "classDefinition", 
                   "classKey", "baseClause", "baseSpecifier", "classMemberDeclaration", 
                   "accessSpecifier", "enumDefinition", "enumeratorList", 
                   "enumerator", "usingDeclaration", "typedefDeclaration", 
                   "functionDefinition", "functionDeclarator", "functionBody", 
                   "declaration", "initDeclaratorList", "initDeclarator", 
                   "declaratorList", "declarator", "arraySuffix", "ptrOperator", 
                   "refQualifier", "noexceptSpecification", "trailingReturnType", 
                   "parameterDeclarationList", "parameterDeclaration", "declSpecifierSeq", 
                   "declSpecifier", "storageClassSpecifier", "functionSpecifier", 
                   "cvQualifier", "simpleTypeSpecifier", "typeReference", 
                   "qualifiedIdentifier", "unqualifiedIdentifier", "operatorToken", 
                   "initializer", "braceInitializer", "compoundStatement", 
                   "statement", "declarationStatement", "ifStatement", "switchStatement", 
                   "whileStatement", "doWhileStatement", "forStatement", 
                   "forInitStatement", "returnStatement", "breakStatement", 
                   "continueStatement", "tryStatement", "handler", "exceptionDeclaration", 
                   "labeledStatement", "expressionStatement", "constantExpression", 
                   "expression", "assignmentExpression", "assignmentOperator", 
                   "conditionalExpression", "logicalOrExpression", "logicalAndExpression", 
                   "inclusiveOrExpression", "exclusiveOrExpression", "andExpression", 
                   "equalityExpression", "relationalExpression", "shiftExpression", 
                   "additiveExpression", "multiplicativeExpression", "unaryExpression", 
                   "unaryOperator", "postfixExpression", "postfixSuffix", 
                   "argumentExpressionList", "primaryExpression", "literal" ]

    EOF = Token.EOF
    PP_DIRECTIVE=1
    NAMESPACE=2
    USING=3
    TYPEDEF=4
    CLASS=5
    STRUCT=6
    ENUM=7
    UNION=8
    PUBLIC=9
    PRIVATE=10
    PROTECTED=11
    VIRTUAL=12
    OVERRIDE=13
    FINAL=14
    TEMPLATE=15
    TYPENAME=16
    FRIEND=17
    INLINE=18
    EXPLICIT=19
    EXTERN=20
    STATIC=21
    MUTABLE=22
    CONSTEXPR=23
    CONST=24
    VOLATILE=25
    AUTO=26
    VOID=27
    BOOL=28
    CHAR=29
    SHORT=30
    INT=31
    LONG=32
    FLOAT=33
    DOUBLE=34
    SIGNED=35
    UNSIGNED=36
    IF=37
    ELSE=38
    SWITCH=39
    CASE=40
    DEFAULT=41
    FOR=42
    WHILE=43
    DO=44
    BREAK=45
    CONTINUE=46
    RETURN=47
    GOTO=48
    TRY=49
    CATCH=50
    THROW=51
    NEW=52
    DELETE=53
    THIS=54
    NULLPTR=55
    TRUE=56
    FALSE=57
    NOEXCEPT=58
    OPERATOR=59
    SIZEOF=60
    ELLIPSIS=61
    SCOPE=62
    ARROW=63
    ARROWSTAR=64
    PLUSPLUS=65
    MINUSMINUS=66
    ANDAND=67
    OROR=68
    LE=69
    GE=70
    EQ=71
    NE=72
    PLUSEQ=73
    MINUSEQ=74
    STAREQ=75
    DIVEQ=76
    MODEQ=77
    ANDEQ=78
    OREQ=79
    XOREQ=80
    LSHIFTEQ=81
    RSHIFTEQ=82
    LSHIFT=83
    RSHIFT=84
    LPAREN=85
    RPAREN=86
    LBRACE=87
    RBRACE=88
    LBRACK=89
    RBRACK=90
    SEMI=91
    COMMA=92
    DOT=93
    COLON=94
    QUESTION=95
    ASSIGN=96
    PLUS=97
    MINUS=98
    STAR=99
    DIV=100
    MOD=101
    AMP=102
    PIPE=103
    CARET=104
    BANG=105
    TILDE=106
    LT=107
    GT=108
    IntegerLiteral=109
    FloatingLiteral=110
    CharacterLiteral=111
    StringLiteral=112
    Identifier=113
    LineComment=114
    BlockComment=115
    WS=116

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class TranslationUnitContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(ccParser.EOF, 0)

        def topLevelDeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ccParser.TopLevelDeclarationContext)
            else:
                return self.getTypedRuleContext(ccParser.TopLevelDeclarationContext,i)


        def getRuleIndex(self):
            return ccParser.RULE_translationUnit

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTranslationUnit" ):
                listener.enterTranslationUnit(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTranslationUnit" ):
                listener.exitTranslationUnit(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTranslationUnit" ):
                return visitor.visitTranslationUnit(self)
            else:
                return visitor.visitChildren(self)




    def translationUnit(self):

        localctx = ccParser.TranslationUnitContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_translationUnit)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 173
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 576460889742307582) != 0) or ((((_la - 67)) & ~0x3f) == 0 and ((1 << (_la - 67)) & 70957171474433) != 0):
                self.state = 170
                self.topLevelDeclaration()
                self.state = 175
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 176
            self.match(ccParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TopLevelDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def preprocessorDirective(self):
            return self.getTypedRuleContext(ccParser.PreprocessorDirectiveContext,0)


        def namespaceDefinition(self):
            return self.getTypedRuleContext(ccParser.NamespaceDefinitionContext,0)


        def linkageSpecification(self):
            return self.getTypedRuleContext(ccParser.LinkageSpecificationContext,0)


        def templateDeclaration(self):
            return self.getTypedRuleContext(ccParser.TemplateDeclarationContext,0)


        def classDefinition(self):
            return self.getTypedRuleContext(ccParser.ClassDefinitionContext,0)


        def enumDefinition(self):
            return self.getTypedRuleContext(ccParser.EnumDefinitionContext,0)


        def usingDeclaration(self):
            return self.getTypedRuleContext(ccParser.UsingDeclarationContext,0)


        def typedefDeclaration(self):
            return self.getTypedRuleContext(ccParser.TypedefDeclarationContext,0)


        def functionDefinition(self):
            return self.getTypedRuleContext(ccParser.FunctionDefinitionContext,0)


        def declaration(self):
            return self.getTypedRuleContext(ccParser.DeclarationContext,0)


        def SEMI(self):
            return self.getToken(ccParser.SEMI, 0)

        def getRuleIndex(self):
            return ccParser.RULE_topLevelDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTopLevelDeclaration" ):
                listener.enterTopLevelDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTopLevelDeclaration" ):
                listener.exitTopLevelDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTopLevelDeclaration" ):
                return visitor.visitTopLevelDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def topLevelDeclaration(self):

        localctx = ccParser.TopLevelDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_topLevelDeclaration)
        try:
            self.state = 191
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 178
                self.preprocessorDirective()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 179
                self.namespaceDefinition()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 180
                self.linkageSpecification()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 181
                self.templateDeclaration()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 182
                self.classDefinition()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 183
                self.enumDefinition()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 184
                self.usingDeclaration()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 185
                self.typedefDeclaration()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 186
                self.functionDefinition()
                pass

            elif la_ == 10:
                self.enterOuterAlt(localctx, 10)
                self.state = 187
                self.declaration()
                self.state = 188
                self.match(ccParser.SEMI)
                pass

            elif la_ == 11:
                self.enterOuterAlt(localctx, 11)
                self.state = 190
                self.match(ccParser.SEMI)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PreprocessorDirectiveContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PP_DIRECTIVE(self):
            return self.getToken(ccParser.PP_DIRECTIVE, 0)

        def getRuleIndex(self):
            return ccParser.RULE_preprocessorDirective

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPreprocessorDirective" ):
                listener.enterPreprocessorDirective(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPreprocessorDirective" ):
                listener.exitPreprocessorDirective(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPreprocessorDirective" ):
                return visitor.visitPreprocessorDirective(self)
            else:
                return visitor.visitChildren(self)




    def preprocessorDirective(self):

        localctx = ccParser.PreprocessorDirectiveContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_preprocessorDirective)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 193
            self.match(ccParser.PP_DIRECTIVE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TemplateDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TEMPLATE(self):
            return self.getToken(ccParser.TEMPLATE, 0)

        def LT(self):
            return self.getToken(ccParser.LT, 0)

        def templateParameterList(self):
            return self.getTypedRuleContext(ccParser.TemplateParameterListContext,0)


        def GT(self):
            return self.getToken(ccParser.GT, 0)

        def topLevelDeclaration(self):
            return self.getTypedRuleContext(ccParser.TopLevelDeclarationContext,0)


        def getRuleIndex(self):
            return ccParser.RULE_templateDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTemplateDeclaration" ):
                listener.enterTemplateDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTemplateDeclaration" ):
                listener.exitTemplateDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTemplateDeclaration" ):
                return visitor.visitTemplateDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def templateDeclaration(self):

        localctx = ccParser.TemplateDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_templateDeclaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 195
            self.match(ccParser.TEMPLATE)
            self.state = 196
            self.match(ccParser.LT)
            self.state = 197
            self.templateParameterList()
            self.state = 198
            self.match(ccParser.GT)
            self.state = 199
            self.topLevelDeclaration()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TemplateParameterListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def templateParameter(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ccParser.TemplateParameterContext)
            else:
                return self.getTypedRuleContext(ccParser.TemplateParameterContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(ccParser.COMMA)
            else:
                return self.getToken(ccParser.COMMA, i)

        def getRuleIndex(self):
            return ccParser.RULE_templateParameterList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTemplateParameterList" ):
                listener.enterTemplateParameterList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTemplateParameterList" ):
                listener.exitTemplateParameterList(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTemplateParameterList" ):
                return visitor.visitTemplateParameterList(self)
            else:
                return visitor.visitChildren(self)




    def templateParameterList(self):

        localctx = ccParser.TemplateParameterListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_templateParameterList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 201
            self.templateParameter()
            self.state = 206
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==92:
                self.state = 202
                self.match(ccParser.COMMA)
                self.state = 203
                self.templateParameter()
                self.state = 208
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TemplateParameterContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Identifier(self):
            return self.getToken(ccParser.Identifier, 0)

        def CLASS(self):
            return self.getToken(ccParser.CLASS, 0)

        def TYPENAME(self):
            return self.getToken(ccParser.TYPENAME, 0)

        def declSpecifierSeq(self):
            return self.getTypedRuleContext(ccParser.DeclSpecifierSeqContext,0)


        def declarator(self):
            return self.getTypedRuleContext(ccParser.DeclaratorContext,0)


        def getRuleIndex(self):
            return ccParser.RULE_templateParameter

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTemplateParameter" ):
                listener.enterTemplateParameter(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTemplateParameter" ):
                listener.exitTemplateParameter(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTemplateParameter" ):
                return visitor.visitTemplateParameter(self)
            else:
                return visitor.visitChildren(self)




    def templateParameter(self):
